// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multilple expenses 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totaling 
    $59,923,800.53
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totaling 
    $1,000.00
  </h1>
</div>
`;
